--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
         </li>
       </template>
     </main>
+    <script src='./scripts/cards.js'></script>
     <script src='./scripts/index.js'></script>
   </body>
 </html>
