fix: исправлены ошибки в функциях, константах

--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
               id='inputName'
               type='text'
               name='name'
-              placeholder='Жак-Ив Кусто'
+              placeholder='Имя'
             >
             <input
               class='popup__input popup__input_job'
               id='inputJob'
               type='text'
               name='job'
-              placeholder='Исследователь океана'
+              placeholder='Род деятельности'
             >
             <button
               class='popup__submit-button'
