--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       </div>
 
       <!-- Шаблон для создания карточки -->
-      <template id='card'>
+      <template id='card' class ='card'>
         <li class='element'>
           <img src='#' alt='Шаблон картинки' class='element__image'>
           <div class='element__sign'>
@@ -181,9 +181,6 @@
           </div>
         </li>
       </template>
-    </main>
-    <script src='./scripts/cards.js' defer></script>
-    <script src='./scripts/validate.js' defer></script>
-    <script src='./scripts/index.js' defer></script>
+      <script type="module" src='./scripts/index.js' defer></script>
   </body>
 </html>
