--- a/index.html
+++ b/index.html
@@ -182,5 +182,6 @@
         </li>
       </template>
       <script type="module" src='./scripts/index.js' defer></script>
+    </main>
   </body>
 </html>
