--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,6 @@
    >
     <meta name='keywords' content='Картинки, профиль'>
     <meta name='author' content='Ямалиева Юлия'>
-    <link rel='stylesheet' href='./pages/index.css'>
     <title>Mesto Russia</title>
   </head>
 
@@ -18,7 +17,7 @@
     <header class='header'>
       <img
         class='header__logo'
-        src='./images/header-logo.svg'
+        src= "<%require('./images/header-logo.svg')%>"
         alt='Логотип с надписью Место'
      >
     </header>
@@ -27,7 +26,7 @@
         <!--Секция, блок profile -->
         <div class='profile__container'>
           <img
-            src='./images/photo-profile.jpg'
+            src="<%require('./images/photo-profile.jpg')%>"
             alt='Фото профиля'
             class='profile__image'
          >
@@ -181,7 +180,6 @@
           </div>
         </li>
       </template>
-      <script type="module" src='./scripts/index.js' defer></script>
     </main>
   </body>
 </html>
