fixed: ПР8 после первого ревью

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
    >
     <meta name='keywords' content='Картинки, профиль'>
     <meta name='author' content='Ямалиева Юлия'>
+    <link rel='stylesheet' href='./pages/index.css'>
     <title>Mesto Russia</title>
   </head>
 
@@ -17,7 +18,7 @@
     <header class='header'>
       <img
         class='header__logo'
-        src= "<%require('./images/header-logo.svg')%>"
+        src= "<%=require('./images/header-logo.svg')%>"
         alt='Логотип с надписью Место'
      >
     </header>
@@ -26,7 +27,7 @@
         <!--Секция, блок profile -->
         <div class='profile__container'>
           <img
-            src="<%require('./images/photo-profile.jpg')%>"
+            src="<%=require('./images/photo-profile.jpg')%>"
             alt='Фото профиля'
             class='profile__image'
          >
