--- a/src/index.html
+++ b/src/index.html
@@ -27,10 +27,15 @@
         <!--Секция, блок profile -->
         <div class='profile__container'>
           <img
-            src="<%=require('./images/photo-profile.jpg')%>"
-            alt='Фото профиля'
-            class='profile__image'
-         >
+          src="<%=require('./images/avatar.jpg')%>"
+          alt='Фото профиля'
+          class='profile__image'
+          >
+          <button 
+            class='profile__avatar-button' 
+            type='button' 
+            title='Обновить аватар'>
+          </button>
           <div class='profile__info'>
             <h1 class='profile__name'>Жак-Ив Кусто</h1>
             <button
@@ -151,7 +156,7 @@
 
       <!-- Popup: Увеличенное изображение -->
       <div id='openPicture' class='popup popup_type_image'>
-        <figure class='popup__image-container'>
+        <figure class='popup__container'>
           <button
             class='popup__close-button'
             type='button'
@@ -160,6 +165,30 @@
           <img src='#' alt='Клик для увеличения' class='popup__image'>
           <figcaption class='popup__image-caption'>#</figcaption>
         </figure>
+      </div>
+
+      <!-- Popup: Подтверждение удаления карточки -->
+      <div id='deleteCard' class='popup popup_type_confirm'>
+        <div class='popup__container'>
+          <button class='popup__close-button' type='button' title='Закрыть'></button>
+          <form class='popup__form' name='profileData' novalidate>
+            <p class='popup__title'>Вы уверены?</p>
+            <button class='popup__submit-button' type='submit' title='Подтвердить'>Да</button>
+          </form>
+        </div>
+      </div>
+
+      <!-- Popup: Создание нового аватара -->
+      <div id='addAvatar' class='popup popup_type_avatar'>
+        <div class='popup__container'>
+          <button class='popup__close-button' type='button' title='Закрыть'></button>
+          <form class='popup__form' name='placeData' novalidate>
+            <p class='popup__title'>Обновить аватар</p>
+            <input class='popup__input popup__input_avatar' id='avatar' type='url' name='url' placeholder='Ссылка на аватар' required>
+            <span class='popup__input-error avatar-error'></span>
+            <button class='popup__submit-button' type='submit' title='Сохранить'>Сохранить</button>
+          </form>
+        </div>
       </div>
 
       <!-- Шаблон для создания карточки -->
@@ -173,11 +202,14 @@
               type='button'
               aria-label='Удалить карточку'
             ></button>
-            <button
-              class='element__like-button'
-              type='button'
-              title='Поставить лайк'
-            ></button>
+            <div class='element__like-list'>
+              <button
+                class='element__like-button'
+                type='button'
+                title='Поставить лайк'
+              ></button>
+              <span class='element__like-count'>0</span>
+            </div>
           </div>
         </li>
       </template>
