--- a/src/index.html
+++ b/src/index.html
@@ -1,109 +1,105 @@
 <!DOCTYPE html>
-<html lang='ru'>
+<html lang="ru">
   <head>
-    <meta charset='UTF-8'>
-    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta
-      name='description'
-      content='Одностраничный сайт с возможностью добавления картинок и редактирования профиля в рамках курса Веб-разработчик от Яндекс Практикума'
+      name="description"
+      content="Одностраничный сайт с возможностью добавления картинок и редактирования профиля в рамках курса Веб-разработчик от Яндекс Практикума"
    >
-    <meta name='keywords' content='Картинки, профиль'>
-    <meta name='author' content='Ямалиева Юлия'>
-    <link rel='stylesheet' href='./pages/index.css'>
+    <meta name="keywords" content="Картинки, профиль">
+    <meta name="author" content="Ямалиева Юлия">
+    <link rel="stylesheet" href="./pages/index.css">
     <title>Mesto Russia</title>
   </head>
 
-  <body class='page'>
+  <body class="page">
     <!--Header-->
-    <header class='header'>
+    <header class="header">
       <img
-        class='header__logo'
-        src= "<%=require('./images/header-logo.svg')%>"
-        alt='Логотип с надписью Место'
+        class="header__logo"
+        src="<%=require('./images/header-logo.svg')%>"
+        alt="Логотип с надписью Место"
      >
     </header>
-    <main class='content'>
-      <section class='profile'>
+    <main class="content">
+      <section class="profile">
         <!--Секция, блок profile -->
-        <div class='profile__container'>
-          <img
-          src="<%=require('./images/avatar.jpg')%>"
-          alt='Фото профиля'
-          class='profile__image'
-          >
-          <button 
-            class='profile__avatar-button' 
-            type='button' 
-            title='Обновить аватар'>
-          </button>
-          <div class='profile__info'>
-            <h1 class='profile__name'>Жак-Ив Кусто</h1>
+        <div class="profile__container">
+          <img src="#" alt="Фото профиля" class="profile__image">
+          <button
+            class="profile__avatar-button"
+            type="button"
+            title="Обновить аватар"
+          ></button>
+          <div class="profile__info">
+            <h1 class="profile__name">Жак-Ив Кусто</h1>
             <button
-              class='profile__edit-button'
-              type='button'
-              title='Редактировать профиль'
+              class="profile__edit-button"
+              type="button"
+              title="Редактировать профиль"
             ></button>
-            <p class='profile__job'>Исследователь океана</p>
+            <p class="profile__job">Исследователь океана</p>
           </div>
         </div>
         <button
-          class='profile__add-button'
-          type='button'
-          title='Добавить карточку'
+          class="profile__add-button"
+          type="button"
+          title="Добавить карточку"
         ></button>
       </section>
 
-      <section class='elements'>
+      <section class="elements">
         <!--Секция, блок с карточками -->
-        <ul class='elements__list'></ul>
+        <ul class="elements__list"></ul>
       </section>
 
-      <footer class='footer'>
+      <footer class="footer">
         <!--Подвал сайта, блок footer -->
-        <p class='footer__copyright'>&copy; 2023 Mesto Russia</p>
+        <p class="footer__copyright">&copy; 2023 Mesto Russia</p>
       </footer>
 
       <!--Popup: Редактировать профиль-->
-      <div id='editProfile' class='popup popup_type_edit-profile'>
-        <div class='popup__container'>
+      <div id="editProfile" class="popup popup_type_edit-profile">
+        <div class="popup__container">
           <button
-            class='popup__close-button button'
-            type='button'
-            title='Закрыть окно'
+            class="popup__close-button button"
+            type="button"
+            title="Закрыть окно"
           ></button>
           <form
-            name='popupContainer'
-            class='popup__form'
-            method='post'
-            action='action'
+            name="popupContainer"
+            class="popup__form"
+            method="post"
+            action="action"
           >
-            <p class='popup__title'>Редактировать профиль</p>
+            <p class="popup__title">Редактировать профиль</p>
             <input
-              class='popup__input popup__input_name'
-              id='inputName'
-              type='text'
-              name='name'
-              placeholder='Имя'
+              class="popup__input popup__input_name"
+              id="name"
+              type="text"
+              name="name"
+              placeholder="Имя"
               required
-              minlength='2'
-              maxlength='40'
+              minlength="2"
+              maxlength="40"
            >
-            <span class='inputName-error popup__input-error'></span>
+            <span class="inputName-error popup__input-error"></span>
             <input
-              class='popup__input popup__input_job'
-              id='inputJob'
-              type='text'
-              name='job'
-              placeholder='О себе'
+              class="popup__input popup__input_job"
+              id="about"
+              type="text"
+              name="job"
+              placeholder="О себе"
               required
-              minlength='2'
-              maxlength='200'
+              minlength="2"
+              maxlength="200"
            >
-            <span class='inputJob-error popup__input-error'></span>
+            <span class="inputJob-error popup__input-error"></span>
             <button
-              class='popup__submit-button'
-              type='submit'
-              title='Сохранить изменения'
+              class="popup__submit-button"
+              type="submit"
+              title="Сохранить изменения"
             >
               Сохранить
             </button>
@@ -112,42 +108,42 @@
       </div>
 
       <!--Popup: Добавить карточку-->
-      <div id='addCard' class='popup popup_type_add-card'>
-        <div class='popup__container'>
+      <div id="addCard" class="popup popup_type_add-card">
+        <div class="popup__container">
           <button
-            class='popup__close-button'
-            type='button'
-            title='Закрыть окно'
+            class="popup__close-button"
+            type="button"
+            title="Закрыть окно"
           ></button>
           <form
-            name='popupContainer'
-            class='popup__form'
-            method='post'
-            action='action'
+            name="popupContainer"
+            class="popup__form"
+            method="post"
+            action="action"
           >
-            <p class='popup__title'>Новое место</p>
+            <p class="popup__title">Новое место</p>
             <input
-              class='popup__input popup__input_image_name'
-              id='nameCard'
-              type='text'
-              name='nameCard'
-              placeholder='Название'
+              class="popup__input popup__input_image_name"
+              id="nameCard"
+              type="text"
+              name="nameCard"
+              placeholder="Название"
               required
-              minlength='2'
-              maxlength='30'
+              minlength="2"
+              maxlength="30"
            >
-            <span class='nameCard-error popup__input-error'></span>
+            <span class="nameCard-error popup__input-error"></span>
             <input
-              class='popup__input popup__input_image_link'
-              id='linkCard'
-              type='url'
-              name='linkCard'
-              placeholder='Cсылка на картинку'
+              class="popup__input popup__input_image_link"
+              id="linkCard"
+              type="url"
+              name="linkCard"
+              placeholder="Cсылка на картинку"
               required
-              pattern='https://.+'
+              pattern="https://.+"
            >
-            <span class='linkCard-error popup__input-error'></span>
-            <button class='popup__submit-button' type='submit' title='Создать'>
+            <span class="linkCard-error popup__input-error"></span>
+            <button class="popup__submit-button" type="submit" title="Создать">
               Создать
             </button>
           </form>
@@ -155,60 +151,87 @@
       </div>
 
       <!-- Popup: Увеличенное изображение -->
-      <div id='openPicture' class='popup popup_type_image'>
-        <figure class='popup__container'>
+      <div id="openPicture" class="popup popup_type_image">
+        <figure class="popup__container">
           <button
-            class='popup__close-button'
-            type='button'
-            aria-label='Закрыть окно'
+            class="popup__close-button"
+            type="button"
+            aria-label="Закрыть окно"
           ></button>
-          <img src='#' alt='Клик для увеличения' class='popup__image'>
-          <figcaption class='popup__image-caption'>#</figcaption>
+          <img src="#" alt="Клик для увеличения" class="popup__image">
+          <figcaption class="popup__image-caption">#</figcaption>
         </figure>
       </div>
 
       <!-- Popup: Подтверждение удаления карточки -->
-      <div id='deleteCard' class='popup popup_type_confirm'>
-        <div class='popup__container'>
-          <button class='popup__close-button' type='button' title='Закрыть'></button>
-          <form class='popup__form' name='profileData' novalidate>
-            <p class='popup__title'>Вы уверены?</p>
-            <button class='popup__submit-button' type='submit' title='Подтвердить'>Да</button>
+      <div id="deleteCard" class="popup popup_type_confirm">
+        <div class="popup__container">
+          <button
+            class="popup__close-button"
+            type="button"
+            title="Закрыть"
+          ></button>
+          <form class="popup__form" name="profileData" novalidate>
+            <p class="popup__title">Вы уверены?</p>
+            <button
+              class="popup__submit-button"
+              type="submit"
+              title="Подтвердить"
+            >
+              Да
+            </button>
           </form>
         </div>
       </div>
 
       <!-- Popup: Создание нового аватара -->
-      <div id='addAvatar' class='popup popup_type_avatar'>
-        <div class='popup__container'>
-          <button class='popup__close-button' type='button' title='Закрыть'></button>
-          <form class='popup__form' name='placeData' novalidate>
-            <p class='popup__title'>Обновить аватар</p>
-            <input class='popup__input popup__input_avatar' id='avatar' type='url' name='url' placeholder='Ссылка на аватар' required>
-            <span class='popup__input-error avatar-error'></span>
-            <button class='popup__submit-button' type='submit' title='Сохранить'>Сохранить</button>
+      <div id="addAvatar" class="popup popup_type_avatar">
+        <div class="popup__container">
+          <button
+            class="popup__close-button"
+            type="button"
+            title="Закрыть"
+          ></button>
+          <form class="popup__form" name="placeData" novalidate>
+            <p class="popup__title">Обновить аватар</p>
+            <input
+              class="popup__input popup__input_avatar"
+              id="avatar"
+              type="url"
+              name="url"
+              placeholder="Ссылка на аватар"
+              required
+           >
+            <span class="popup__input-error avatar-error"></span>
+            <button
+              class="popup__submit-button"
+              type="submit"
+              title="Сохранить"
+            >
+              Сохранить
+            </button>
           </form>
         </div>
       </div>
 
       <!-- Шаблон для создания карточки -->
-      <template id='card' class ='card'>
-        <li class='element'>
-          <img src='#' alt='Шаблон картинки' class='element__image'>
-          <div class='element__sign'>
-            <h2 class='element__title'>#</h2>
+      <template id="card" class="card">
+        <li class="element">
+          <img src="#" alt="Шаблон картинки" class="element__image">
+          <div class="element__sign">
+            <h2 class="element__title">#</h2>
             <button
-              class='element__delete-button'
-              type='button'
-              aria-label='Удалить карточку'
+              class="element__delete-button"
+              type="button"
+              aria-label="Удалить карточку"
             ></button>
-            <div class='element__like-list'>
+            <div class="element__like-list">
               <button
-                class='element__like-button'
-                type='button'
-                title='Поставить лайк'
+                class="element__like-button"
+                type="button"
+                title="Поставить лайк"
               ></button>
-              <span class='element__like-count'>0</span>
+              <span class="element__like-count">0</span>
             </div>
           </div>
         </li>
